# capture-enrichment

./: .env.example  .gitignore  pyproject.toml  readme.md  result.json  sessions.json  telemetry.md  viewer.html
39A90878-5D69-437A-946C-F8B3C65F6E40_result/: result.json
D834FA49-D935-4FAA-A4BA-C816E3C162AC_result/: result.json
F480BE2D-F220-4C65-9755-38E64762E11E_result/: result.json
capture_enrichment/: annotate.py  config.py  handler.py  ingest.py  models.py  segment.py  telemetry.py  video.py
tests/: conftest.py  test_annotate.py  test_handler.py  test_ingest.py  test_segment.py  test_serve_viewer.py  test_telemetry.py  test_video.py
tools/: serve_viewer.py
