[project]
name = "capture-enrichment"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.8",
    "ffmpeg-python>=0.2",
    "boto3>=1.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
